--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -8,6 +8,8 @@ jobs:
   build-and-test:
     # ジョブが実行される環境
     runs-on: ubuntu-latest
+    # 3タイムアウトを30分に指定
+    timeout-minutes: 30
     steps:
       # ソースコードのチェックアウト（ダウンロード）
       - name: Checkout code
