--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,14 +8,20 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: write
+  pull-requests: write
+  actions: read
+
+defaults:
+  run:
+    shell: bash
+
 jobs:
   release:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: write
-      pull-requests: write
-      actions: read
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - uses: actions/checkout@v4
@@ -23,88 +29,158 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: actions/setup-java@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
+          cache: gradle
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Setup keystore
-        run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > app/release.jks
+      - name: Bump Version
+        uses: chkfung/android-version-actions@v1.2.2
+        with:
+          gradlePath: app/build.gradle.kts
+          versionName: ${{ github.event.inputs.version_name }}
+          versionCode: ${{ github.run_number }}
 
-      - name: Update version and build
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+      - name: Create properties files
         run: |
-          # バージョン更新
-          CURRENT=$(grep -oP 'versionCode\s*=\s*\K\d+' app/build.gradle.kts)
-          NEW=$((CURRENT + 1))
-          sed -i "s/versionCode = [0-9]*/versionCode = $NEW/" app/build.gradle.kts
-          sed -i "s/versionName = \"[^\"]*\"/versionName = \"${{ github.event.inputs.version_name }}\"/" app/build.gradle.kts
+          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> secret.properties
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> secret.properties
+          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> secret.properties
+
+      - name: Decode KeyStore
+        run: |
+          if [ -z "${{ secrets.KEYSTORE_BASE64 }}" ]; then
+            echo "Error: KEYSTORE_BASE64 secret is not set"
+            exit 1
+          fi
           
-          # ビルド
-          ./gradlew assembleRelease bundleRelease
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | tr -d '\n\r' | base64 --decode > app/release.jks
           
-          # Git設定とブランチ作成
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git config user.name "${{ github.actor }}"
-          git checkout -b release/v${{ github.event.inputs.version_name }}
+          if [ ! -f app/release.jks ]; then
+            echo "Error: Failed to create keystore file"
+            exit 1
+          fi
+          
+          echo "Keystore file created successfully"
+
+      - name: Build Release
+        run: ./gradlew assembleRelease bundleRelease
+
+      - name: Setup Git
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+
+      - name: Create Release Branch
+        run: |
+          BRANCH_NAME="release/v${{ github.event.inputs.version_name }}-${{ github.run_number }}"
+          git checkout -b $BRANCH_NAME
           git add app/build.gradle.kts
-          git commit -m "Release v${{ github.event.inputs.version_name }}"
-          git push origin release/v${{ github.event.inputs.version_name }}
+          git commit -m "Release v${{ github.event.inputs.version_name }} (build ${{ github.run_number }})"
+          git push origin $BRANCH_NAME
+          echo "RELEASE_BRANCH=$BRANCH_NAME" >> $GITHUB_ENV
 
-      - name: Create Pull Request
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload APK as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release-${{ github.event.inputs.version_name }}-${{ github.run_number }}.apk
+          path: app/build/outputs/apk/release/*.apk
+
+      - name: Upload AAB as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release-${{ github.event.inputs.version_name }}-${{ github.run_number }}.aab
+          path: app/build/outputs/bundle/release/*.aab
+
+      - name: Generate Release Notes
+        id: release_notes
         run: |
-          # PRリスト取得
           LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+          
           if [ -z "$LAST_TAG" ]; then
-            echo "初回リリース" > pr_body.txt
+            RELEASE_NOTES="## Initial Release
+          
+          Version: ${{ github.event.inputs.version_name }}
+          Build: ${{ github.run_number }}
+          
+          This is the initial release of the application."
           else
-            echo "## Changes since $LAST_TAG" > pr_body.txt
+            echo "## Changes since $LAST_TAG" > release_notes.md
+            echo "" >> release_notes.md
+            echo "Version: ${{ github.event.inputs.version_name }}" >> release_notes.md
+            echo "Build: ${{ github.run_number }}" >> release_notes.md
+            echo "" >> release_notes.md
+          
+            # マージされたPRのリストを取得
             git log ${LAST_TAG}..HEAD --oneline --merges --grep="Merge pull request" | \
             grep -oP '#\K\d+' | while read pr; do 
-              gh pr view $pr --json number,title --jq '"- [#\(.number)](${{ github.server_url }}/${{ github.repository }}/pull/\(.number)) \(.title)"' 2>/dev/null || true
-            done >> pr_body.txt
+              gh pr view $pr --json number,title --jq '"- [#\(.number)](${{ github.server_url }}/${{ github.repository }}/pull/\(.number)) \(.title)"' 2>/dev/null || echo "- PR #$pr"
+            done >> release_notes.md
+          
+            RELEASE_NOTES=$(cat release_notes.md)
           fi
           
-          # バージョンコード取得
-          VERSION_CODE=$(grep -oP 'versionCode\s*=\s*\K\d+' app/build.gradle.kts)
-          
-          # PR作成
-          gh pr create --title "Release v${{ github.event.inputs.version_name }}" \
-            --body "Version: ${{ github.event.inputs.version_name }} (Code: $VERSION_CODE)
-
-          $(cat pr_body.txt)" \
-            --base main \
-            --head release/v${{ github.event.inputs.version_name }}
+          # 複数行の出力をGitHub環境変数に設定
+          echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
+          echo "$RELEASE_NOTES" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
       - name: Create GitHub Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        id: create_release
         run: |
-          # リリースノート作成
-          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
-          if [ -z "$LAST_TAG" ]; then
-            RELEASE_NOTES="初回リリース"
-          else
-            RELEASE_NOTES="## Changes since $LAST_TAG
-          $(git log ${LAST_TAG}..HEAD --oneline --merges --grep="Merge pull request" | \
-          grep -oP '#\K\d+' | while read pr; do 
-            gh pr view $pr --json number,title --jq '"- [#\(.number)](${{ github.server_url }}/${{ github.repository }}/pull/\(.number)) \(.title)"' 2>/dev/null || true
-          done)"
-          fi
-          
           gh release create "v${{ github.event.inputs.version_name }}" \
             app/build/outputs/apk/release/*.apk \
             app/build/outputs/bundle/release/*.aab \
             --title "Release v${{ github.event.inputs.version_name }}" \
             --notes "$RELEASE_NOTES" \
             --draft
+
+      - name: Check Existing Pull Request
+        id: check_pr
+        run: |
+          pr_count=$(gh pr list -H $RELEASE_BRANCH -B main --json number | jq length)
+          echo "count=$pr_count" >> $GITHUB_OUTPUT
+
+      - name: Create Pull Request
+        if: steps.check_pr.outputs.count == '0'
+        run: |
+          gh pr create \
+            --head $RELEASE_BRANCH \
+            --base main \
+            --title "Release v${{ github.event.inputs.version_name }}" \
+            --body "## Release Summary
+          
+          Version: ${{ github.event.inputs.version_name }}
+          Build: ${{ github.run_number }}
+          
+          $RELEASE_NOTES
+          
+          ## Files Changed
+          - Updated version in \`app/build.gradle.kts\`
+          
+          ## Release Assets
+          - APK: Available in GitHub Release
+          - AAB: Available in GitHub Release
+          
+          ## Next Steps
+          1. Review and test the release
+          2. Merge this PR to main
+          3. Publish the GitHub Release (currently draft)"
+
+      - name: Summary
+        run: |
+          echo "## Release Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "✅ **Version**: ${{ github.event.inputs.version_name }}" >> $GITHUB_STEP_SUMMARY
+          echo "✅ **Build Number**: ${{ github.run_number }}" >> $GITHUB_STEP_SUMMARY
+          echo "✅ **Branch**: $RELEASE_BRANCH" >> $GITHUB_STEP_SUMMARY
+          echo "✅ **APK/AAB**: Built and uploaded" >> $GITHUB_STEP_SUMMARY
+          echo "✅ **GitHub Release**: Created (draft)" >> $GITHUB_STEP_SUMMARY
+          echo "✅ **Pull Request**: Created or already exists" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "🔗 [View Release](https://github.com/${{ github.repository }}/releases/tag/v${{ github.event.inputs.version_name }})" >> $GITHUB_STEP_SUMMARY
