--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,13 +21,12 @@ jobs:
   release:
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-          token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -72,22 +71,11 @@ jobs:
         with:
           tag: "v${{ github.event.inputs.version_name }}"
           name: "Release v${{ github.event.inputs.version_name }}"
-
           # 自動生成リリースノートを有効化
           generateReleaseNotes: true
-
-          # 手動で追加する情報があれば併用可能
-          body: |
-            ## Release Summary
-            Version: ${{ github.event.inputs.version_name }}
-
-            ## Automatic Release Notes
-            _Below are automatically generated release notes:_
-
           artifacts: |
             app/build/outputs/apk/release/*.apk
             app/build/outputs/bundle/release/*.aab
-
           draft: true
           token: ${{ secrets.GITHUB_TOKEN }}
 
